add/fix: add novo metodo de validator json schema. fix novo versao